; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_dwc_otg.c_dwc_otg_compute_isoc_rx_tt_slot.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/controller/extr_dwc_otg.c_dwc_otg_compute_isoc_rx_tt_slot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dwc_otg_tt_info = type { i64 }

@DWC_OTG_TT_SLOT_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.dwc_otg_tt_info*)* @dwc_otg_compute_isoc_rx_tt_slot to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @dwc_otg_compute_isoc_rx_tt_slot(%struct.dwc_otg_tt_info* %0) #0 {
  %2 = alloca %struct.dwc_otg_tt_info*, align 8
  store %struct.dwc_otg_tt_info* %0, %struct.dwc_otg_tt_info** %2, align 8
  %3 = load %struct.dwc_otg_tt_info*, %struct.dwc_otg_tt_info** %2, align 8
  %4 = getelementptr inbounds %struct.dwc_otg_tt_info, %struct.dwc_otg_tt_info* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @DWC_OTG_TT_SLOT_MAX, align 8
  %7 = icmp slt i64 %5, %6
  br i1 %7, label %8, label %13

8:                                                ; preds = %1
  %9 = load %struct.dwc_otg_tt_info*, %struct.dwc_otg_tt_info** %2, align 8
  %10 = getelementptr inbounds %struct.dwc_otg_tt_info, %struct.dwc_otg_tt_info* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = add nsw i64 %11, 1
  store i64 %12, i64* %10, align 8
  br label %13

13:                                               ; preds = %8, %1
  %14 = load %struct.dwc_otg_tt_info*, %struct.dwc_otg_tt_info** %2, align 8
  %15 = getelementptr inbounds %struct.dwc_otg_tt_info, %struct.dwc_otg_tt_info* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  ret i64 %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
